Find vaccine Centre (07-06-2021)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     //SwipeCard
     implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 
+    //Volley
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.volley:volley:1.2.0'
+
 }
